--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=sumairshah802@gmail.com
-MAIL_PASSWORD=fobmybilnhtgngww
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="sumairshah802@gmail.com"
 MAIL_FROM_NAME="fron AMS"
